--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,12 +1,13 @@
 name: Build and Extract live2d-widget.min.js
 
 on:
+  workflow_dispatch:
   push:
     branches:
-      - main
+      - master
   pull_request:
     branches:
-      - main
+      - master
 
 jobs:
   build:
@@ -29,7 +30,7 @@ jobs:
 
       # Step 4: Build the project
       - name: Build the project
-        run: npm run build
+        run: npm run build:prod
 
       # Step 5: Upload the built `live2d-widget.min.js` file
       - name: Upload the built minified JS file
